# Vulkan2D

./: .gitattributes  .gitignore  .gitmodules  BlendModes_8h.html  BlendModes_8h__incl.map  BlendModes_8h__incl.md5  BlendModes_8h_source.html  Blobs_8h.html  Blobs_8h.js  Blobs_8h_source.html  Buffer_8h.html  Buffer_8h.js  Buffer_8h__incl.map  Buffer_8h__incl.md5  Buffer_8h_source.html  CMakeLists.txt  Camera_8h.html  Camera_8h.js  Camera_8h__dep__incl.map  Camera_8h__dep__incl.md5  Camera_8h__incl.map  Camera_8h__incl.md5  Camera_8h_source.html  Constants_8h.html  Constants_8h.js  Constants_8h__dep__incl.map  Constants_8h__dep__incl.md5  Constants_8h__incl.map  Constants_8h__incl.md5  Constants_8h_source.html  Context.html  DescriptorBuffer_8h.html  DescriptorBuffer_8h.js  DescriptorBuffer_8h__incl.map  DescriptorBuffer_8h__incl.md5  DescriptorBuffer_8h_source.html  DescriptorControl_8h.html  DescriptorControl_8h.js  DescriptorControl_8h__incl.map  DescriptorControl_8h__incl.md5  (+567 more)
.github/workflows/: doxygen.yml
VK2D/: BlendModes.h  Blobs.h  Buffer.c  Buffer.h  BuildOptions.h  Camera.c  Camera.h  Constants.c  Constants.h  DescriptorBuffer.c  DescriptorBuffer.h  DescriptorControl.c  DescriptorControl.h  Gui.c  Gui.h  Image.c  Image.h  Initializers.c  Initializers.h  Logger.c  Logger.h  LogicalDevice.c  LogicalDevice.h  Math.h  Model.c  Model.h  Opaque.h  PhysicalDevice.c  PhysicalDevice.h  Pipeline.c  Pipeline.h  Polygon.c  Polygon.h  Renderer.c  Renderer.h  RendererMeta.c  RendererMeta.h  Shader.c  Shader.h  ShadowEnvironment.c  (+16 more)
VK2D/include/VK2D/: BlendModes.h  Buffer.h  Camera.h  Constants.h  DescriptorControl.h  Gui.h  Image.h  Initializers.h  LogicalDevice.h  Math.h  Model.h  Opaque.h  PhysicalDevice.h  Pipeline.h  Polygon.h  Renderer.h  RendererMeta.h  Shader.h  ShadowEnvironment.h  Texture.h  VK2D.h  Validation.h  VulkanInterface.h  tinyobj_loader_c.h
VK2D/src/: Buffer.c  Constants.c  DescriptorControl.c  Image.c  Initializers.c  Logger.c  LogicalDevice.c  Model.c  PhysicalDevice.c  Pipeline.c  Renderer.c  RendererMeta.c  Shader.c  Texture.c  Util.c  Validation.c  nuklear.c
assets/: frag.spv  test.frag  test.vert  vert.spv
docs/: 3DPipeline.md  Cameras.md  Optimization.md  QuickStart.md
examples/: debug.c
examples/gui/: CMakeLists.txt  README.md  main.c
examples/instancing/: CMakeLists.txt  README.md  main.c
examples/main/: CMakeLists.txt  main.c
examples/multithread-loading/: CMakeLists.txt  README.md  main.c
examples/retrolook/: CMakeLists.txt  README.md  main.c
examples/shadows/: CMakeLists.txt  README.md  main.c
examples/shadowsglsl/: CMakeLists.txt  README.md  main.c
examples/splitscreen/: CMakeLists.txt  README.md  main.c
examples/testing/: CMakeLists.txt  main.c
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  (+37 more)
shaders/: colour.frag  colour.vert  genblobs.py  instanced.frag  instanced.vert  model.frag  model.vert  shadows.frag  shadows.vert  spritebatch.comp  tex.frag  tex.vert
