cmake_minimum_required(VERSION 3.17)
project(Vulkan2D-Examples)
add_subdirectory(SDL)
add_subdirectory(examples/main)
add_subdirectory(examples/retrolook)
add_subdirectory(examples/splitscreen)
add_subdirectory(examples/shadows)
add_subdirectory(examples/shadowsglsl)
add_subdirectory(examples/testing)